--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta http-equiv="Content-type" content="text/html; charset=utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="./public/css/style.css">
         <script src="https://kit.fontawesome.com/76165e89d2.js" crossorigin="anonymous"></script>
         <title>Projet 3 - Lucas Lefort</title>
