--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <section id="header">
-            <header class="header">
+            <header class="header header--home">
                 <a href="index.html"><img class="header__img" src="./public/images/logo/ohmyfood.png" alt="Ohmyfood"></a>
             </header>
             <div class="loc">
@@ -38,7 +38,7 @@
                 <h1 class="restaurants__title">Restaurants</h1>
                 <div class="restaurants__container">
                     <div class="restaurant">
-                        <a class="restaurant__link" href="#">
+                        <a class="restaurant__link" href="./restaurants/la-palette-du-gout.html">
                             <div class="restaurant__new">Nouveau</div>
                             <img class="restaurant__img" src="./public/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo du restaurant La palette du goût">
                             <div class="restaurant__text">
@@ -61,7 +61,7 @@
                         </svg>
                     </div>
                     <div class="restaurant">
-                        <a class="restaurant__link" href="#">
+                        <a class="restaurant__link" href="./restaurants/la-note-enchantee.html">
                             <div class="restaurant__new">Nouveau</div>
                             <img class="restaurant__img" src="./public/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo du restaurant La note enchantée">
                             <div class="restaurant__text">
@@ -84,7 +84,7 @@
                         </svg>
                     </div>
                     <div class="restaurant">
-                        <a class="restaurant__link" href="#">
+                        <a class="restaurant__link" href="./restaurants/a-la-francaise.html">
                             <img class="restaurant__img" src="./public/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo du restaurant À la française">
                             <div class="restaurant__text">
                                 <h2 class="restaurant__text__title">À la française</h2>
@@ -106,7 +106,7 @@
                         </svg>
                     </div>
                     <div class="restaurant">
-                        <a class="restaurant__link" href="#">
+                        <a class="restaurant__link" href="./restaurants/le-delice-des-sens.html">
                             <img class="restaurant__img" src="./public/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Photo du restaurant Le délice des sens">
                             <div class="restaurant__text">
                                 <h2 class="restaurant__text__title">Le délice des sens</h2>
