--- a/restaurants/la-note-enchantee.html
+++ b/restaurants/la-note-enchantee.html
@@ -11,6 +11,7 @@
     <body>
         <section id="header">
             <header class="header">
+                <a href="/"><i class="fa-solid fa-arrow-left header__icon"></i></a>
                 <a href="/"><img class="header__img" src="../public/images/logo/ohmyfood.png" alt="Ohmyfood"></a>
             </header>
         </section>
