Résolution du bug de redirection sur github pages

--- a/restaurants/le-delice-des-sens.html
+++ b/restaurants/le-delice-des-sens.html
@@ -11,8 +11,8 @@
     <body>
         <section id="header">
             <header class="header">
-                <a href="/"><i class="fa-solid fa-arrow-left header__icon"></i></a>
-                <a href="/"><img class="header__img" src="../public/images/logo/ohmyfood.png" alt="Ohmyfood"></a>
+                <a href="/OCR-Projet3"><i class="fa-solid fa-arrow-left header__icon"></i></a>
+                <a href="/OCR-Projet3"><img class="header__img" src="../public/images/logo/ohmyfood.png" alt="Ohmyfood"></a>
             </header>
         </section>
         <section class="menu background--ledelicedessens">
