--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <section id="header">
             <header class="header header--home">
-                <a href="index.html"><img class="header__img" src="./public/images/logo/ohmyfood.png" alt="Ohmyfood"></a>
+                <a href="/OCR-Projet3"><img class="header__img" src="./public/images/logo/ohmyfood.png" alt="Ohmyfood"></a>
             </header>
             <div class="loc">
                 <i class="loc__icon fa-solid fa-location-dot"></i>
