Ajout animation chargement menu pages restaurants

--- a/restaurants/a-la-francaise.html
+++ b/restaurants/a-la-francaise.html
@@ -39,21 +39,21 @@
                         <hr>
                     </div>
                     <div class="menu__carte__container">
-                        <div class="menu__carte__element">
+                        <div class="menu__carte__element menu__carte__element--1">
                             <h2>Tartare de poulpe acidulé</h2>
                             <div class="menu__carte__element__bottom">
                                 <p>Aux zests d'orange</p>
                                 <h4>25€</h4>
                             </div>
                         </div>
-                        <div class="menu__carte__element">
+                        <div class="menu__carte__element menu__carte__element--2">
                             <h2>Velouté de légumes d'antan</h2>
                             <div class="menu__carte__element__bottom">
                                 <p>Carotte, panais, topinambour</p>
                                 <h4>35€</h4>
                             </div>
                         </div>
-                        <div class="menu__carte__element">
+                        <div class="menu__carte__element menu__carte__element--3">
                             <h2>Soupe à l'oignon</h2>
                             <div class="menu__carte__element__bottom">
                                 <p>Revisitée</p>
@@ -68,21 +68,21 @@
                         <hr>
                     </div>
                     <div class="menu__carte__container">
-                        <div class="menu__carte__element">
+                        <div class="menu__carte__element menu__carte__element--4">
                             <h2>Coquilles Saint-Jacques</h2>
                             <div class="menu__carte__element__bottom">
                                 <p>Accompagnées d'une purée de panais</p>
                                 <h4>40€</h4>
                             </div>
                         </div>
-                        <div class="menu__carte__element">
+                        <div class="menu__carte__element menu__carte__element--5">
                             <h2>Magret de canard</h2>
                             <div class="menu__carte__element__bottom">
                                 <p>Et parmentier de pommes de terre</p>
                                 <h4>35€</h4>
                             </div>
                         </div>
-                        <div class="menu__carte__element">
+                        <div class="menu__carte__element menu__carte__element--6">
                             <h2>Pigeonneau d’Ille-et-Vilaine</h2>
                             <div class="menu__carte__element__bottom">
                                 <p>Sur son lit de gnocchis aux légumes</p>
@@ -97,21 +97,21 @@
                         <hr>
                     </div>
                     <div class="menu__carte__container">
-                        <div class="menu__carte__element">
+                        <div class="menu__carte__element menu__carte__element--7">
                             <h2>Pétales de violettes glacés</h2>
                             <div class="menu__carte__element__bottom">
                                 <p>Et purée de noisettes</p>
                                 <h4>18€</h4>
                             </div>
                         </div>
-                        <div class="menu__carte__element">
+                        <div class="menu__carte__element menu__carte__element--8">
                             <h2>Fondant au chocolat</h2>
                             <div class="menu__carte__element__bottom">
                                 <p>Revisité</p>
                                 <h4>22€</h4>
                             </div>
                         </div>
-                        <div class="menu__carte__element">
+                        <div class="menu__carte__element menu__carte__element--9">
                             <h2>Millefeuille croustillant</h2>
                             <div class="menu__carte__element__bottom">
                                 <p>Myrtilles et pâte d’amande</p>
