--- a/restaurants/la-palette-du-gout.html
+++ b/restaurants/la-palette-du-gout.html
@@ -39,21 +39,21 @@
                         <hr>
                     </div>
                     <div class="menu__carte__container">
-                        <div class="menu__carte__element">
+                        <div class="menu__carte__element menu__carte__element--1">
                             <h2>Fricassée d'escargot</h2>
                             <div class="menu__carte__element__bottom">
                                 <p>Au piment d'Espelette</p>
                                 <h4>25€</h4>
                             </div>
                         </div>
-                        <div class="menu__carte__element">
+                        <div class="menu__carte__element menu__carte__element--2">
                             <h2>Foie gras de canard mi-cuit</h2>
                             <div class="menu__carte__element__bottom">
                                 <p>Et ses copeaux de truffe noire</p>
                                 <h4>35€</h4>
                             </div>
                         </div>
-                        <div class="menu__carte__element">
+                        <div class="menu__carte__element menu__carte__element--3">
                             <h2>Oeuf au plat</h2>
                             <div class="menu__carte__element__bottom">
                                 <p>Assaisonné à la truffe sur lit de caviar</p>
@@ -68,21 +68,21 @@
                         <hr>
                     </div>
                     <div class="menu__carte__container">
-                        <div class="menu__carte__element">
+                        <div class="menu__carte__element menu__carte__element--4">
                             <h2>Filet de boeuf aux herbes</h2>
                             <div class="menu__carte__element__bottom">
                                 <p>Accompagné de sa ribambelle de légumes</p>
                                 <h4>40€</h4>
                             </div>
                         </div>
-                        <div class="menu__carte__element">
+                        <div class="menu__carte__element menu__carte__element--5">
                             <h2>Parmentier de queue de boeuf</h2>
                             <div class="menu__carte__element__bottom">
                                 <p>À la truffe noire sur sa purée de panais</p>
                                 <h4>35€</h4>
                             </div>
                         </div>
-                        <div class="menu__carte__element">
+                        <div class="menu__carte__element menu__carte__element--6">
                             <h2>Filet de turbot</h2>
                             <div class="menu__carte__element__bottom">
                                 <p>Aux agrumes</p>
@@ -97,21 +97,21 @@
                         <hr>
                     </div>
                     <div class="menu__carte__container">
-                        <div class="menu__carte__element">
+                        <div class="menu__carte__element menu__carte__element--7">
                             <h2>Paris-Brest</h2>
                             <div class="menu__carte__element__bottom">
                                 <p>Revisité</p>
                                 <h4>18€</h4>
                             </div>
                         </div>
-                        <div class="menu__carte__element">
+                        <div class="menu__carte__element menu__carte__element--8">
                             <h2>Macaron au chocolat d'exception</h2>
                             <div class="menu__carte__element__bottom">
                                 <p>Et glace à la vanille de Madagascar</p>
                                 <h4>22€</h4>
                             </div>
                         </div>
-                        <div class="menu__carte__element">
+                        <div class="menu__carte__element menu__carte__element--9">
                             <h2>Mousse au chocolat</h2>
                             <div class="menu__carte__element__bottom">
                                 <p>Au piment d'Espelette et à la truffe noire</p>
