--- a/restaurants/la-note-enchantee.html
+++ b/restaurants/la-note-enchantee.html
@@ -39,28 +39,28 @@
                         <hr>
                     </div>
                     <div class="menu__carte__container">
-                        <div class="menu__carte__element">
+                        <div class="menu__carte__element menu__carte__element--1">
                             <h2>Ravioles de foie gras</h2>
                             <div class="menu__carte__element__bottom">
                                 <p>Accompagnés de leur crème à la truffe</p>
                                 <h4>25€</h4>
                             </div>
                         </div>
-                        <div class="menu__carte__element">
+                        <div class="menu__carte__element menu__carte__element--2">
                             <h2>Caviar osciètre</h2>
                             <div class="menu__carte__element__bottom">
                                 <p>Sur blini à la farine de blé noir</p>
                                 <h4>35€</h4>
                             </div>
                         </div>
-                        <div class="menu__carte__element">
+                        <div class="menu__carte__element menu__carte__element--3">
                             <h2>Homard et espuma de potiron</h2>
                             <div class="menu__carte__element__bottom">
                                 <p>Mariné aux zestes d'orange</p>
                                 <h4>20€</h4>
                             </div>
                         </div>
-                        <div class="menu__carte__element">
+                        <div class="menu__carte__element menu__carte__element--4">
                             <h2>Foie gras de canard cuit entier</h2>
                             <div class="menu__carte__element__bottom">
                                 <p>Confiture de figue et pain toasté</p>
@@ -75,21 +75,21 @@
                         <hr>
                     </div>
                     <div class="menu__carte__container">
-                        <div class="menu__carte__element">
+                        <div class="menu__carte__element menu__carte__element--5">
                             <h2>Noix de coquilles Saint-Jacques</h2>
                             <div class="menu__carte__element__bottom">
                                 <p>Sur lit de purée de céleri-rave</p>
                                 <h4>40€</h4>
                             </div>
                         </div>
-                        <div class="menu__carte__element">
+                        <div class="menu__carte__element menu__carte__element--6">
                             <h2>Langoustine poêlée</h2>
                             <div class="menu__carte__element__bottom">
                                 <p>Purée de patate douce</p>
                                 <h4>35€</h4>
                             </div>
                         </div>
-                        <div class="menu__carte__element">
+                        <div class="menu__carte__element menu__carte__element--7">
                             <h2>Mijoté de queue de boeuf</h2>
                             <div class="menu__carte__element__bottom">
                                 <p>Et riz sauvage aux zestes de citron</p>
@@ -104,21 +104,21 @@
                         <hr>
                     </div>
                     <div class="menu__carte__container">
-                        <div class="menu__carte__element">
+                        <div class="menu__carte__element menu__carte__element--8">
                             <h2>Macaron noisette et chocolat</h2>
                             <div class="menu__carte__element__bottom">
                                 <p>Glace au caramel brun et sel de Guérande</p>
                                 <h4>18€</h4>
                             </div>
                         </div>
-                        <div class="menu__carte__element">
+                        <div class="menu__carte__element menu__carte__element--9">
                             <h2>Baba au rhum revisité</h2>
                             <div class="menu__carte__element__bottom">
                                 <p>Avec son coulis de citron</p>
                                 <h4>22€</h4>
                             </div>
                         </div>
-                        <div class="menu__carte__element">
+                        <div class="menu__carte__element menu__carte__element--10">
                             <h2>Tarte au citron meringuée</h2>
                             <div class="menu__carte__element__bottom">
                                 <p>Déstructurée</p>
